...

    NSArray<NSString *> *labels = @[@"Tr<", @"Tr>", @"2nd", @"Lang", @"<<", @"<", @">", @">>"];
    NSArray<NSString *> *keys = @[@"[", @"]", @"b", @"t", @"K", @"k", @"j", @"J"];
    NSArray<NSString *> *longKeys = @[@"]", @"[", @"B", @"T"];
    NSArray<NSString *> *accessibility = @[
        @"Previous translation", @"Next translation", @"Add favorite translations", @"Change language",
        @"Previous significant word", @"Previous word", @"Next word", @"Next significant word"
    ];
    NSMutableArray<BarButton *> *buttons = [NSMutableArray arrayWithCapacity:labels.count];
    for (NSUInteger index = 0; index < labels.count; index++) {
        BarButton *button = [[BarButton alloc] initWithFrame:CGRectZero];
        button.translatesAutoresizingMaskIntoConstraints = NO;
        button.secondary = index < 4;
...
                                    action:@selector(resetFontSize:)
                      discoverabilityTitle:@"Reset Font Size"]];
        [commands addObject:
         [UIKeyCommand keyCommandWithInput:@","
                             modifierFlags:UIKeyModifierCommand
                                    action:@selector(showAbout:)
                      discoverabilityTitle:@"Settings"]];
    }
    return commands;
}

- (void)setTerminal:(Terminal *)terminal {
    _terminal = terminal;
...
