...
static NSString *const kPreferenceFontSizeKey = @"Font Size";
static NSString *const kBlinkFontDefaultsMigrationKey = @"1Unix Blink Font Defaults v1";
static NSString *const kPragmataFontMigrationKey = @"1Unix Pragmata Font v1";
static NSString *const kPreferenceThemeKey = @"ModernTheme";
static NSString *const kPreferenceDisableDimmingKey = @"Disable Dimming";
static NSString *const kPreferenceKeepKeyboardHiddenInMouseModeKey = @"Keep Keyboard Hidden in Mouse Mode";
static NSString *const kPreferenceShowDanteReaderBarKey = @"Show Dante Reader Bar";
NSString *const kPreferenceLaunchCommandKey = @"Init Command";
NSString *const kPreferenceBootCommandKey = @"Boot Command";
static NSString *const kPreferenceCursorStyleKey = @"Cursor Style";
static NSString *const kPreferenceBlinkCursorKey = @"Blink Cursor";
NSString *const kPreferenceHideStatusBarKey = @"Status Bar";
static NSString *const kPreferenceColorSchemeKey = @"Color Scheme";
...
